fixed theme contrast (primary vs. secondary) for mobile

--- a/vite-personal-website/src/index.scss
+++ b/vite-personal-website/src/index.scss
@@ -2,9 +2,9 @@
     --color-primary: rgb(22,22,24);
     --color-primary-contrast: rgb(255,255,255);
     --color-primary-rgb: 22,22,24;
-    --color-secondary: rgb(25,29,36);
+    --color-secondary: rgb(50,54,62);
     --color-secondary-contrast: rgb(255,255,255);
-    --color-secondary-rgb: 25,29,36;
+    --color-secondary-rgb: 50,54,62;
     --color-accent: rgb(88,123,218);
     --color-accent-contrast: rgb(255,255,255);
     --color-accent-rgb: 88,123,218;
